--- a/Labs/TripsApp/package.json
+++ b/Labs/TripsApp/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "bootstrap": "^5.0.0-alpha3",
+    "ng-starrating": "^1.0.20",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
