--- a/Labs/TripsApp/package.json
+++ b/Labs/TripsApp/package.json
@@ -27,7 +27,7 @@
     "firebase": "^8.2.1",
     "ng-starrating": "^1.0.20",
     "ngx-bootstrap": "^6.2.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
