--- a/Labs/TripsApp/package.json
+++ b/Labs/TripsApp/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~10.2.0",
     "bootstrap": "^5.0.0-alpha3",
     "firebase": "^8.2.1",
+    "ng-bootstrap": "^1.6.3",
     "ng-starrating": "^1.0.20",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "^6.6.3",
