--- a/Labs/TripsApp/package.json
+++ b/Labs/TripsApp/package.json
@@ -3,43 +3,56 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod",
+    "postinstall": "ng build --aot --prod"
+  },
+  "engine": {
+    "node": "15.4.0",
+    "npm": "6.14.11"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.0",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "~10.2.0",
-    "@angular/compiler": "~10.2.0",
-    "@angular/core": "~10.2.0",
+    "@angular/animations": "~11.0.9",
+    "@angular/cdk": "^11.0.4",
+    "@angular/common": "~11.0.9",
+    "@angular/compiler": "~11.0.9",
+    "@angular/compiler-cli": "^11.0.9",
+    "@angular/core": "~11.0.9",
     "@angular/fire": "^6.1.4",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~10.2.0",
-    "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "~10.2.0",
-    "@angular/platform-browser-dynamic": "~10.2.0",
-    "@angular/router": "~10.2.0",
-    "bootstrap": "^5.0.0-alpha3",
-    "firebase": "^8.2.1",
+    "@angular/forms": "~11.0.9",
+    "@angular/material": "^11.0.4",
+    "@angular/platform-browser": "~11.0.9",
+    "@angular/platform-browser-dynamic": "~11.0.9",
+    "@angular/router": "~11.0.9",
+    "@material/card": "^9.0.0",
+    "bootstrap": "^5.0.0-beta1",
+    "express": "^4.17.1",
+    "firebase": "^8.2.3",
+    "mdb": "^0.1.0",
     "ng-bootstrap": "^1.6.3",
     "ng-starrating": "^1.0.20",
     "ngx-bootstrap": "^6.2.0",
+    "node": "^15.4.0",
+    "path": "^0.12.7",
     "rxjs": "^6.6.3",
-    "tslib": "^2.0.0",
+    "tslib": "^2.1.0",
+    "typescript": "4.0.2-insiders.20200818",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "~10.2.0",
-    "@angular/compiler-cli": "~10.2.0",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^0.1002.1",
+    "@angular/cli": "^11.0.7",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.19.14",
     "codelyzer": "^6.0.0",
+    "enhanced-resolve": "^3.4.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -50,6 +63,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "4.0.2-insiders.20200818"
   }
 }
